--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 		<title>AxGord's Projects</title>
 		<style>
 			body {
+        		background-color: #f1f1f1;
 				font-size: 30px;
+       			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 			}
 			a {
+				color: #4183c4;
 				text-decoration: none;
+			}
+			li {
+				list-style: square;
+				color: brown;
 			}
 		</style>
 	</head>
